<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Register for Meetup</string>
    <string name="field_name">Name</string>
    <string name="field_email">E-Mail</string>
    <string name="field_company">Company</string>
    <string name="field_store">Store for next time</string>
    <string name="field_photo">Add Photo</string>
    <string name="field_submit">Register</string>
    <string name="field_name_example">example: Max Mustermann</string>
    <string name="field_email_example">example: max.mustermann@example.com</string>
    <string name="field_company_example">example: ACME Ltd.</string>

    <string name="pref_service_url_title">Service URL</string>
    <string name="pref_service_url_hint">http://example.com/visits</string>

    <string name="action_settings">Settings</string>

</resources>
