<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/field_name_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/field_email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/field_email_example"
        android:ems="10"
        android:id="@+id/field_form_email" />

    <TextView
        android:id="@+id/field_name_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/field_name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/field_name_example"
        android:ems="10"
        android:id="@+id/field_form_name" />

    <TextView
        android:id="@+id/field_name_company"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/field_company_example"
        android:text="@string/field_company" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_company_example"
        android:inputType="textCapWords"
        android:id="@+id/field_form_company" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_store"
        android:checked="true"
        android:id="@+id/field_form_store" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_submit"
        android:id="@+id/field_form_submit" />
</LinearLayout>
